
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [1.0.0-rc.3] - 2020-11-10
### Change
* Added TLS Support for both GRPC and HTTP interfaces #76
* Prometheus metrics are now prefixed with `gubernator_`
* Switched prometheus Histograms to Summary's

## [1.0.0-rc.2] - 2020-11-05
### Change
* Add Service Account to k8s deployment yaml

## [1.0.0-rc.1] - 2020-10-22
### Change
* Added `GUBER_DATA_CENTER` as a config option
* Use `GUBER_PEER_DISCOVERY_TYPE` to pick a peer discovery type, removed
'Enable' options from k8s, etcd, and member-list.
* Added `GUBER_ADVERTISE_ADDRESS` to specify which address is published for
discovery
* Gubernator now attempts to detect the proper `GUBER_ADVERTISE_ADDRESS` if
not specified
* Gubernator now binds to `localhost` by default instead of binding to
`0.0.0.0:80` to avoid allowing
  access to a test version of gubernator from the network.
* Fix inconsistent tests failing #57
* Fix GRPC/HTTP Gateway #50
* Renamed functions to ensure clarity of version
* Removed deprecated `EtcdAdvertiseAddress` config option
* Refactored configuration options
* `member-list` metadata no longer assumes the member-list address is the same
  as the gubernator advertise address.
* Now MD5 sums the peer address key when using replicated hash. This ensures
  better key distribution when using domain names or ip address that are very
  similar. (gubernator-1, gubernator-2, etc...)
* Now defaults to `replicated-hash` if `GUBER_PEER_PICKER` is unset
* Added support for DataCenter fields when using etcd discovery
* Now storing member-list metadata as JSON instead of glob

## [0.9.2] - 2020-10-23
### Change
* ETCD discovery now sets the IsOwner property when updating the peers list.

## [0.9.1] - 2020-10-19
### Change
* Fix GUBER_PEER_PICKER_HASH and GUBER_PEER_PICKER
* Now warns if GUBER_PEER_PICKER value is incorrect