@@ -9,6 +9,10 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 * Added TLS Support for both GRPC and HTTP interfaces #76
 * Prometheus metrics are now prefixed with `gubernator_`
 * Switched prometheus Histograms to Summary's
+* Changed gubernator.Config.GRPCServer to GRPCServers to support registering
+with GRPC instances on multiple ports.
+* Gubernator now opens a second GRPC instance on a random localhost port when
+TLS is enabled for use by the HTTP API Gateway.
 
 ## [1.0.0-rc.2] - 2020-11-05
 ### Change
